[TASK] - Fix swagger authentication
