# storage/api-docs/api-docs.json
@@ -69,7 +69,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearer_Auth": []
                     }
                 ]
             }
@@ -140,7 +140,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearer_Auth": []
                     }
                 ]
             }
@@ -178,7 +178,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearer_Auth": []
                     }
                 ]
             }
@@ -205,7 +205,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearer_Auth": []
                     }
                 ]
             },
@@ -241,7 +241,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearer_Auth": []
                     }
                 ]
             },
@@ -266,7 +266,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearer_Auth": []
                     }
                 ]
             }
@@ -571,10 +571,10 @@
             }
         },
         "securitySchemes": {
-            "api_key_security_example": {
+            "bearer_Auth": {
                 "type": "apiKey",
                 "description": "A short description for security scheme",
-                "name": "Bearer",
+                "name": "Authorization",
                 "in": "header"
             }
         }
